# rebar_control

./: .gitignore  DATA_COLLECTION_GUIDE.md  INTEGRATED_CONTROL_DEBUG_ANALYSIS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PRECISION_NAVIGATION_DESIGN.md  PRECISION_NAV_IMPLEMENTATION.md  README.md  README_PHASE2.md  REBAR_REFACTORING_PLAN.md  REBAR_VISION_DEVELOPMENT_PLAN.md  ROBOT_CONTROL_ARCHITECTURE.md  RVIZ2_DEPTH_SETUP.md  TELEOP_IMPLEMENTATION.md  ZED_LINK_CRITICAL_ISSUE.md  ZED_LINK_TROUBLESHOOTING.md  cleanup_logs.sh  install_vscode.sh  integrated_control.sh  integrated_control_debug.sh  precise_speed_logger.py  quick_depth_check.sh  test_precision_nav.sh
src/: SeeNGrip_Manual_KOR_v0.97.md
src/ezi_io_ros2/ezi_io_ros2/: ezi_io_node.py
src/rebar_base_control/: CMakeLists.txt  package.xml  setup.py
src/rebar_base_control/config/: can_devices.yaml  modbus_devices.yaml
src/rebar_base_control/launch/: base_system.launch.py
src/rebar_base_control/rebar_base_control/: authority_controller.py  can_parser.py  can_sender.py  can_sender_parser.md  drive_controller.py  ezi_io_controller.py  joint_controller.py  joint_controller.py.bak  lateral_encoder_calibration.py  lateral_motion.py  modbus_controller.py  navigator_base.py  sequence_controller.py  velocity_profiler.py
src/rebar_base_interfaces/: CMakeLists.txt  package.xml
src/rebar_base_interfaces/msg/: DriveControl.msg  GripperControl.msg  IOStatus.msg  JointControl.msg  MotorFeedback.msg  RemoteControl.msg  Waypoint.msg  WaypointArray.msg
src/rebar_control/: README.md  package.xml  setup.py
src/rebar_control/config/: zenoh_config.yaml
src/rebar_control/docs/: ARCHITECTURE_DIAGRAM.md  ODOM_TO_POSE_NODE.md
src/rebar_control/launch/: control_system.launch.py  full_system.launch.py
src/rebar_control/rebar_control/: cmd_vel_relay.py  iron_md_teleop_node.py  navigator.py  odom_to_pose.py  performance_test.py  pose_mux.py  precise_speed_logger.py  precision_navigation_node.py  rebar_controller.py  rebar_publisher.py  zenoh_client.py
src/rebar_control/scripts/: send_hybrid_path.py  visualize_results.py
src/rebar_interfaces/: CMakeLists.txt  package.xml
src/rebar_interfaces/action/: PrecisionNav.action  TyingSequence.action
src/rebar_interfaces/msg/: RebarStatus.msg
src/rebar_interfaces/srv/: SetMode.srv
src/rebar_msgs/: CMakeLists.txt  package.xml
src/rebar_msgs/msg/: PrecisionNavFeedback.msg  PrecisionNavGoal.msg  PrecisionNavStatus.msg
src/rebar_vision/: README.md  package.xml  setup.cfg  setup.py
src/rebar_vision/config/: zed_depth_config.yaml
src/rebar_vision/launch/: data_collection.launch.py
src/rebar_vision/rebar_vision/: dual_camera_recorder_node.py
src/rmd_robot_control/: setup.py
src/rmd_robot_control/config/: robot_control.yaml
src/rmd_robot_control/launch/: cmd_vel_only.launch.py  robot_control.launch.py
src/rmd_robot_control/rmd_robot_control/: position_control_node.py
src/seengrip_ros2/config/: seengrip.yaml
src/seengrip_ros2/launch/: seengrip.launch.py
src/seengrip_ros2/seengrip_ros2/: seengrip_node.py
