<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebar_control</name>
  <version>0.1.0</version>
  <description>Rebar upper control layer (Phase 3)</description>
  <maintainer email="koceti@example.com">koceti</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rebar_base_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-zenoh</exec_depend>
  <exec_depend>python3-msgpack</exec_depend>
  <exec_depend>python3-statemachine</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
